Fix height on mobile browsers

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ html, body {
     color: white;
     font-family: "8bitOperatorPlus-Bold";
     min-height: 100vh;
+    min-height: 100dvh;
     width: 100%;
     padding: 0;
     margin: 0;
